# aide

./: .gitignore  .mcp.json  CITATION.cff  Cargo.toml  LICENSE  PRIVATE-README.md  README.md  aide.example.toml  install.sh  vercel.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs.yml  release.yml
agents/.template/github-workflow/: agent.yml
agents/code-review/: Agentfile.toml  persona.md
agents/code-review/skills/: plan.sh  qa.sh  review.sh  ship.sh
agents/debate/: Agentfile.toml  persona.md
agents/debate/skills/: meet.sh  status.sh
agents/dev/: Agentfile.toml  persona.md
agents/dev/skills/: build-docs.sh  check.sh  lint.sh  release.sh  test.sh
agents/github-reviewer/: Agentfile.toml  persona.md
agents/github-reviewer/skills/: _check_gh.sh  ci.sh  diff.sh  log.sh  notifications.sh  pr.sh
agents/gmail/: Agentfile.toml  persona.md
agents/gmail/skills/: inbox.sh  read.sh  search.sh  summary.sh  unread.sh
agents/gpu/: Agentfile.toml  README.md  gpu_queue.py  persona.md  requirements.txt  server.py  vram.py
agents/gpu/skills/: serve.sh  status.sh
agents/infra/: Agentfile.toml
agents/infra/memory/: lessons.md
agents/jenny/: Agentfile.toml  persona.md
agents/jenny/seed/: README.md
agents/jenny/skills/: chrome.sh  cool.sh  easychair.sh  email.sh  judgeboi.sh
agents/ntu-student/: Agentfile.toml
agents/ntu-student/skills/: briefing.sh  cool.sh
agents/teaching-monster/: Agentfile.toml  persona.md
agents/teaching-monster/seed/: competition.md
agents/teaching-monster/skills/: evaluate.sh  generate.sh  login.sh  logs.sh  score.sh  serve.sh  status.sh  stop.sh
agents/twitter/memory/: lessons.md
agents/weather/: Agentfile.toml  persona.md
agents/weather/skills/: hello.sh
constitution/: AGENT-OS.md  AMEM.md  DISPATCH-SYNC.md  OVERVIEW.md  README.md  SKILLS.md  TRUST-MODEL.md
docs/: book.toml  check-links.sh
docs/src/: README.md  SUMMARY.md  hub.md  tip-loader.js
docs/src/arch/: docker-comparison.md  git-native.md  philosophy.md  roadmap.md  run-lifecycle.md  semantic-injection.md  soul.md
docs/src/commands/: build.md  daemon.md  dash.md  dashboard.md  dispatch.md  emit.md  exec.md  expose.md  import-export.md  init-lint.md  init.md  mcp.md  (+6 more)
sim/: model.py  run_test.py
sites/chatfounder/: index.html
skills/agent-exec/: SKILL.md
skills/agent-list/: SKILL.md
skills/agent-run/: SKILL.md
spec/: v2-aidefile.md
spec-attack/: run.sh
src/: aidefile.rs  api.rs  budget.rs  company.rs  daemon.rs  dashboard.rs  db.rs  dispatch.rs  emit.rs  events.rs  hub.rs  init.rs  main.rs  mcp.rs  registry.rs  runner.rs  top.rs  vault.rs
src/agents/: agentfile.rs  commit.rs  instance.rs  lint.rs  mod.rs  mount.rs  registry.rs  scaffold.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/dashboard/: mod.rs
src/dispatch/: mod.rs
src/email/: mod.rs
src/expose/: github.rs  mod.rs  telegram.rs
src/sync/: mod.rs
src/vault/: mod.rs
tests/: e2e.sh  integration.sh  vault_test.sh
tla/: Agent.cfg  Agent.tla  Gateway.cfg  Gateway.tla  System.cfg  System.tla
workers/email-gateway/: package-lock.json  package.json  wrangler.toml
(+19 files in other folders)
