[package]
name = "aide-sh"
version = "2.0.0-alpha.2"
edition = "2021"
description = "One file to agentize your Claude project."
license = "MIT"
repository = "https://github.com/yiidtw/aide"
homepage = "https://aide.sh"
keywords = ["agent", "ai", "claude", "aidefile"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aide"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cron = "0.16"
dirs = "6"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
rusqlite = { version = "0.33", features = ["bundled"] }
shellexpand = "3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wait-timeout = "0.2"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }

[profile.release]
strip = true
lto = true

[dev-dependencies]
tempfile = "3"
